--- a/Nosotros.html
+++ b/Nosotros.html
@@ -28,7 +28,7 @@
         font-size: 50px;
         background-color: aqua;
         text-align: center;
-        margin: 100px;
+        margin: 250px;
         border-radius: 20px;
       }
 
@@ -48,8 +48,8 @@
         
     </style>
     <div class="contenedor">
-        <h1>PREGUNTITAS</h1>
-            <a href="inicio.html"> Inicio </a>
-            <a href="Nosotros.html"> Nosotros </a>
+        <a>Quienes somos Nosotros</h1>
+            <a href="index.html">Inicio</a>
+            <a>Nosotros</a>
     </div>
   </body></html>
