--- a/Nosotros.html
+++ b/Nosotros.html
@@ -15,7 +15,7 @@
         background-size: 100%;
         text-align: center;
         font-family: 'Times New Roman', Times, serif;
-        font-size: 120%;
+        font-size: 100%;
       }
       button{
         height: 200px;
@@ -32,7 +32,7 @@
         border-radius: 20px;
       }
 
-      a{
+      h1{
         font-size: 60px;
         color: black;
         background-color: orange;
@@ -48,8 +48,10 @@
         
     </style>
     <div class="contenedor">
-        <a>Quienes somos Nosotros</h1>
-            <a href="index.html">Inicio</a>
-            <a>Nosotros</a>
+        <h1>Quienes somos Nosotros</h1>
+            <h1>Mision
+              Sign to all brindara una pagina web, la cual contiene una serie de actividades para los estudiantes del colegio Pablo de Tarso IED. En el que a traves de retroalimentacion, ellos se veran comprometidos con mejorar durante el proceso</h1>
+            <h1>Vision
+              En el 2024 esperamos que la institucion pueda adquirir un software mucho mas amplio a medida que se integren nuevos estudiantes al colegio Pablo de Tarso IED, para que las proximas generaciones logren obtener conocimientos</h1>
     </div>
   </body></html>
