--- a/Manual.html
+++ b/Manual.html
@@ -1,9 +1,11 @@
+<!-- Codigo en el cual encontramos la pantalla del Manual Instructivo -->
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <title>Juego de preguntas</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
   </head>
-  
+
+ <!-- Estilos el cuál va a tener la plataforma web-->   
   <body>
     <style>
       * {
@@ -50,8 +52,9 @@
         height: 700px;
         border-color:black;
         border-style:hidden;
-      }
+      }  
     </style>
+    <!-- Información la cual evidencia el usuario, contiene un texto el cuál es un titulo y una imagen-->
     <div class="contenedor">
         <h1>Instructivo para buen uso de nuestra plataforma web</h1>
         <img src="Imagen.png" />
