--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,3 +1,4 @@
+<!-- Codigo en el cual encontramos la pantalla de Nosotros -->
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <title>Juego de preguntas</title>
