--- a/Manual.html
+++ b/Manual.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
   </head>
 
- <!-- Estilos el cuál va a tener la plataforma web-->   
+ <!-- Estilos el cuál va a tener la plataforma web en la pantalla del Manual Instructivo -->   
   <body>
     <style>
       * {
