--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,6 +5,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
 </head>
 
+<!-- Estilos el cuál va a tener la plataforma web en la pantalla de Nosotros -->
 <body>
   <style>
     * {
