--- a/Nosotros.html
+++ b/Nosotros.html
@@ -75,6 +75,7 @@
     }
       
   </style>
+  <!-- Información la cual evidencia el usuario, contiene cuatro textos el cuál son dos titulos y dos textos informativos-->
   <div class="contenedor">
       <h1>Quienes somos Nosotros</h1>
         <div class="contenedor1">
