--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!-- Codigo en el cual encontramos la pantalla Principal -->
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <title>Juego de preguntas</title>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
 </head>
 
+<!-- Estilos el cuál va a tener la plataforma web en la pantalla Principal -->
 <body>
   <style>
     * {
@@ -51,6 +53,7 @@
     }
       
   </style>
+  <!-- Información la cual evidencia el usuario, contiene tres botones los cuales nós permiten navegar entre pantallas -->
   <div class="contenedor">
       <h1>PREGUNTITAS</h1>
           <a href="inicio.html"> Jugar </a>
